--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "firebase": "^9.0.0-beta.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebaseui": "^5.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -38,6 +38,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-dom": "^17.0.9"
+    "@types/react-dom": "^17.0.9",
+    "firebase": "^8.9.1",
+    "firebaseui": "^5.0.0"
   }
 }
