--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@firebase/firestore": "^3.0.1",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -12,6 +14,7 @@
     "react-firebaseui": "^5.0.2",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
