--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -12,6 +13,8 @@
     "react-firebaseui": "^5.0.2",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.2",
+    "regression": "^2.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -40,6 +43,7 @@
   },
   "devDependencies": {
     "@types/react-dom": "^17.0.9",
+    "@types/regression": "^2.0.2",
     "firebase": "^8.9.1",
     "firebaseui": "^5.0.0"
   }
