--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "rechart": "^0.0.1",
     "recharts": "^2.1.2",
     "regression": "^2.0.1",
+    "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
